--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="tutor-photo">
                         <div class="tutor-photo__square"></div>
-                        <img class="tutor-photo__photo" src="/img/photo_tutor.JPG" width="450px">
+                        <img class="tutor-photo__photo" src="/MariaBerdnik.github.io/About_me_2025/img/tutor.jpg" width="450px">
                     </div>
                 </div>
                 
