--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h2 id="history">-HISTORY FOR ADULTS</h2>          
                     <div class="about-project">
                         
-                       <img class="about-project__photo" src="https://github.com/MariaBerdnik/About_me_2025/blob/main/index.html" width="420px"> 
+                       <img class="about-project__photo" src="https://github.com/MariaBerdnik/About_me_2025/blob/main/img/run.JPG" width="420px"> 
                         <div class="about-project__text"> 
                            <h4>В начале этого года я запустила новый для себя проект - "История для взрослых".</h4> 
                            <br> 
